--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -93,8 +93,8 @@ dependencies {
   testImplementation "org.assertj:assertj-core:3.22.0"
   testImplementation "org.mockito:mockito-core:4.8.1"
   testImplementation "org.projectlombok:lombok:1.18.30"
-  testImplementation "org.springframework:spring-test:6.0.12"
-  testImplementation "org.springframework.boot:spring-boot:3.0.11"
+  testImplementation "org.springframework:spring-test:$springFrameworkVersion"
+  testImplementation "org.springframework.boot:spring-boot:3.0.13"
   testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
