--- a/spring-data-vmware-gemfire/build.gradle
+++ b/spring-data-vmware-gemfire/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     testImplementation "com.vmware.gemfire:geode-tcp-server:$gemfireVersion"
     testImplementation "com.vmware.gemfire:geode-deployment-legacy:$gemfireVersion"
 
-    testImplementation 'org.springframework:spring-test:6.0.12'
+    testImplementation "org.springframework:spring-test:$springFrameworkVersion"
     testImplementation 'org.apache.geronimo.specs:geronimo-jcdi_2.0_spec:1.0.1'
     testImplementation 'javax.interceptor:javax.interceptor-api:1.2.2'
     testImplementation 'javax.el:el-api:2.2'
