--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,10 @@ additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.4
+minimumGradleVersion = 8.5
 
 gemfireVersion=10.1.0
+springDataVersion=3.0.12
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
