SDGF-189: convert Gradle to Kotlin and add version catalogs.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,10 @@ additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.6
+minimumGradleVersion = 8.5
 
-gemfireVersion=10.0.1
+gemfireVersion=10.0.2
+springDataVersion=3.1.7
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
