SDGF-189: Convert Gradle to Kotlin and introduce version catalogs.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,14 @@
 group = com.vmware.gemfire
 version = 1.0.1-build.9999
 
-additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
+additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.4
+minimumGradleVersion = 8.5
 
-gemfireVersion=10.0.1
+gemfireVersion=10.0.2
+springDataVersion=3.0.12
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
