SDGF-189: convert Gradle to Kotlin and introduce version catalogs.

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,11 +11,10 @@ additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.6
+minimumGradleVersion = 8.5
 
 gemfireVersion=9.15.8
+springDataVersion=3.0.12
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
-
-
