--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,10 @@ additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.4
+minimumGradleVersion = 8.5
 
-gemfireVersion=10.0.1
+gemfireVersion=10.0.2
+springDataGeodeVersion=2.7.18
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
