--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,14 @@
 group = com.vmware.gemfire
 version = 1.1.0-build.9999
 
-additionalMavenRepoURLs=''
+additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.4
+minimumGradleVersion = 8.5
 
 gemfireVersion=9.15.8
+springDataGeodeVersion=2.7.18
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
