--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ hs_err_pid*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**
+.idea
 
 # Generated files
 .idea/**/contentModel.xml
@@ -52,6 +54,7 @@ hs_err_pid*
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+build-tools/publishing/.gradle
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -104,4 +107,14 @@ fabric.properties
 generated-pipeline.yml
 
 **/build/*
+#build/*
 .gradle/*
+
+
+**/*test-read-only/*
+
+*.if
+*.drf
+*.krf
+*.crf
+*.dat
