--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@
 
 group = com.vmware.gemfire
 version = 1.1.0-build.9999
-gemfireBaseVersion = 9.15
 
 additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
-minimumGradleVersion = 7.4
+minimumGradleVersion = 8.5
 
-gemfireVersion=9.15.4
+gemfireVersion=9.15.9
+springDataVersion=2.6.10
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
