--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,19 @@
 
 #
-# Copyright (c) VMware, Inc. 2022-2023. All rights reserved.
+# Copyright (c) VMware, Inc. 2022-2024. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
 group = com.vmware.gemfire
 version = 1.0.0-build.9999
 
-additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire
+additionalMavenRepoURLs=
 
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
 
 gemfireVersion=10.0.2
-springDataGeodeVersion=2.7.18
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
