--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 cacheApiVersion = "1.1.1"
+springDataVersion= "2.6.10"
 springFrameworkVersion = "5.3.31"
 springShiroVersion = "1.11.0"
 springShellVersion = "1.2.0.RELEASE"
-springTestVersion = "1.0.0"
-aspectJVersion = "1.9.19"
+springTestVersion = "1.0.1"
+aspectJVersion = "1.9.21"
 jacksonVersion = "2.14.3"
 antlrVersion = "2.7.7"
 cdiApiVersion = "1.2"
@@ -23,9 +24,9 @@ mockitoVersion = "3.12.4"
 lombokVersion = "1.18.30"
 awaitilityVersion = "4.2.0"
 googleCloudStorageVersion = "2.30.1"
-springDependencyManagementVersion = "1.1.0"
+springDependencyManagementVersion = "1.1.4"
 lombokPluginVersion = "8.0.1"
-versionCatalogUpdateVersion = "0.8.3"
+versionCatalogUpdateVersion = "0.8.4"
 versionsVersion = "0.50.0"
 geronimoJcdiVersion = "1.0.1"
 elApiVersion = "2.2"
