--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 cacheApiVersion = "1.1.1"
+springDataVersion="2.7.18"
 springFrameworkVersion = "5.3.31"
 springShiroVersion = "1.12.0"
 springShellVersion = "1.2.0.RELEASE"
 springBootVersion = "2.7.18"
-springTestVersion = "1.0.0"
+springTestGemFireVersion = "1.0.3"
 aspectJVersion = "1.9.20.1"
 jacksonVersion = "2.14.3"
 antlrVersion = "2.7.7"
@@ -23,10 +24,10 @@ jUnitVersion = "4.13.2"
 mockitoVersion = "3.12.4"
 lombokVersion = "1.18.30"
 awaitilityVersion = "4.2.0"
-googleCloudStorageVersion = "2.30.1"
-springDependencyManagementVersion = "1.1.0"
+googleCloudStorageVersion = "2.30.2"
+springDependencyManagementVersion = "1.1.4"
 lombokPluginVersion = "8.0.1"
-versionCatalogUpdateVersion = "0.8.3"
+versionCatalogUpdateVersion = "0.8.4"
 versionsVersion = "0.50.0"
 geronimoJcdiVersion = "1.0.1"
 elApiVersion = "2.2"
@@ -44,11 +45,11 @@ spring-context-support = { module = "org.springframework:spring-context-support"
 spring-tx = { module = "org.springframework:spring-tx", version.ref = "springFrameworkVersion" }
 spring-web = { module = "org.springframework:spring-web", version.ref = "springFrameworkVersion" }
 spring-test = { module = "org.springframework:spring-test", version.ref = "springFrameworkVersion" }
-spring-data-commons = { module = "org.springframework.data:spring-data-commons", version.ref = "springDataGeodeVersion" }
+spring-data-commons = { module = "org.springframework.data:spring-data-commons", version.ref = "springDataVersion" }
 spring-boot = { module = "org.springframework.boot:spring-boot", version.ref = "springBootVersion" }
 spring-shiro = { module = "org.apache.shiro:shiro-spring", version.ref = "springShiroVersion" }
 spring-shell = { module = "org.springframework.shell:spring-shell", version.ref = "springShellVersion" }
-spring-test-gemfire = { module = "com.vmware.gemfire:spring-test-gemfire-9.15-2.7", version.ref = "springTestVersion" }
+spring-test-gemfire = { module = "com.vmware.gemfire:spring-test-gemfire-9.15-2.7", version.ref = "springTestGemFireVersion" }
 aspectJ = { module = "org.aspectj:aspectjweaver", version.ref = "aspectJVersion" }
 jackson-annotation = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jacksonVersion" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jacksonVersion" }
