--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 cacheApiVersion = "1.1.1"
-springDataVersion= "2.6.10"
+springDataVersion = "2.6.10"
 springFrameworkVersion = "5.3.31"
 springShiroVersion = "1.11.0"
 springShellVersion = "1.2.0.RELEASE"
-springTestVersion = "1.0.1"
+springTestGemFireVersion = "1.0.1"
 aspectJVersion = "1.9.21"
 jacksonVersion = "2.14.3"
 antlrVersion = "2.7.7"
@@ -47,7 +47,7 @@ spring-test = { module = "org.springframework:spring-test", version.ref = "sprin
 spring-data-commons = { module = "org.springframework.data:spring-data-commons", version.ref = "springDataVersion" }
 spring-shiro = { module = "org.apache.shiro:shiro-spring", version.ref = "springShiroVersion" }
 spring-shell = { module = "org.springframework.shell:spring-shell", version.ref = "springShellVersion" }
-spring-test-gemfire = { module = "com.vmware.gemfire:spring-test-gemfire-9.15-2.6", version.ref = "springTestVersion" }
+spring-test-gemfire = { module = "com.vmware.gemfire:spring-test-gemfire-9.15-2.6", version.ref = "springTestGemFireVersion" }
 aspectJ = { module = "org.aspectj:aspectjweaver", version.ref = "aspectJVersion" }
 jackson-annotation = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jacksonVersion" }
 jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", version.ref = "jacksonVersion" }
