Fix copyJavadocToBucket and update versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@
 group = com.vmware.gemfire
 version = 1.0.0-build.9999
 
-additionalMavenRepoURLs=
+additionalMavenRepoURLs=''
 
 description = 'Spring Data for VMware GemFire'
 
