--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,12 @@
 [versions]
 cacheApiVersion = "1.1.1"
-springFrameworkVersion = "6.0.15"
+springDataVersion="3.1.8"
+springFrameworkVersion = "6.0.16"
 springShiroVersion = "1.12.0"
 springShellVersion = "1.2.0.RELEASE"
-springBootVersion = "3.1.7"
+springBootVersion = "3.1.8"
 aspectJVersion = "1.9.20.1"
-jacksonVersion = "2.15.2"
+jacksonVersion = "2.15.3"
 antlrVersion = "2.7.7"
 cdiApiVersion = "4.0.1"
 interceptorApiVersion = "1.2.2"
@@ -22,10 +23,10 @@ jUnitVersion = "4.13.2"
 mockitoVersion = "4.8.1"
 lombokVersion = "1.18.30"
 awaitilityVersion = "4.2.0"
-googleCloudStorageVersion = "2.30.1"
-springDependencyManagementVersion = "1.1.0"
+googleCloudStorageVersion = "2.30.2"
+springDependencyManagementVersion = "1.1.4"
 lombokPluginVersion = "8.0.1"
-versionCatalogUpdateVersion = "0.8.3"
+versionCatalogUpdateVersion = "0.8.4"
 versionsVersion = "0.50.0"
 
 [libraries]
