--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,12 @@
 [versions]
 cacheApiVersion = "1.1.1"
-springFrameworkVersion = "6.1.2"
+springFrameworkVersion = "6.1.3"
+springDataVersion = "3.2.2"
 springShiroVersion = "1.13.0"
 springShellVersion = "1.2.0.RELEASE"
-springBootVersion = "3.2.0"
+springBootVersion = "3.2.2"
 aspectJVersion = "1.9.20.1"
-jacksonVersion = "2.16.0"
+jacksonVersion = "2.16.1"
 antlrVersion = "2.7.7"
 cdiApiVersion = "4.0.1"
 interceptorApiVersion = "1.2.2"
@@ -22,10 +23,10 @@ jUnitVersion = "4.13.2"
 mockitoVersion = "4.11.0"
 lombokVersion = "1.18.30"
 awaitilityVersion = "4.2.0"
-googleCloudStorageVersion = "2.30.1"
-springDependencyManagementVersion = "1.1.0"
+googleCloudStorageVersion = "2.30.2"
+springDependencyManagementVersion = "1.1.4"
 lombokPluginVersion = "8.0.1"
-versionCatalogUpdateVersion = "0.8.3"
+versionCatalogUpdateVersion = "0.8.4"
 versionsVersion = "0.50.0"
 
 [libraries]
