--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ org.gradle.workers.max=3
 docsGCSBucket=
 docsGCSProject=
 
-springTestGemfireDockerImage=dev.registry.pivotal.io/pivotal-gemfire/vmware-gemfire:blessed-10.1-jdk17
+springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
