SDGF-221: Fix compilation exception in GatewaySender Fixing inheritDoc tags

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,11 @@
 group = com.vmware.gemfire
 version = 1.0.1-build.9999
 
-additionalMavenRepoURLs=''
-
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
 
-gemfireVersion=10.1.0
+gemfireVersion=10.2.0-build.1040
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
@@ -22,3 +20,6 @@ docsGCSBucket=
 docsGCSProject=
 
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
+
+additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire,gcs://spring-gemfire-build-resources/maven
+mavenPushRepository=gcs://spring-gemfire-build-resources/maven
