--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
 
-gemfireVersion=10.2.0-build.1040
+gemfireVersion=10.1.0
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
@@ -21,5 +21,5 @@ docsGCSProject=
 
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
 
-additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire,gcs://spring-gemfire-build-resources/maven
-mavenPushRepository=gcs://spring-gemfire-build-resources/maven
+additionalMavenRepoURLs=''
+mavenPushRepository=''
