SDGF-225: Reverting docker image

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ org.gradle.daemon=false
 docsGCSBucket=
 docsGCSProject=
 
-springTestGemfireDockerImage=dev.registry.pivotal.io/pivotal-gemfire/vmware-gemfire:blessed-10.2-jdk17
+springTestGemfireDockerImage=springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
 
 additionalMavenRepoURLs=''
 mavenPushRepository=''
