--- a/spring-data-vmware-gemfire/gradle.properties
+++ b/spring-data-vmware-gemfire/gradle.properties
@@ -1,6 +1,10 @@
 #
-# Copyright 2022-2024 Broadcom. All rights reserved.
+# Copyright 2024 Broadcom. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
-testJVMVer=17
+#
+# Copyright 2022-2024 Broadcom. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+jdkVersion=17
