SDGF-209: Update lombok plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
 
 #
+# Copyright 2024 Broadcom. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+
+#
 # Copyright 2022-2024 Broadcom. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -10,8 +15,8 @@ version = 1.0.1-build.9999
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-
-gemfireVersion=10.1.0
+gemfireVersion=10.2.0-build.1076
+jdkVersion=17
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
@@ -20,6 +25,5 @@ docsGCSBucket=
 docsGCSProject=
 
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
-
-additionalMavenRepoURLs=''
+additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire,gcs://spring-gemfire-build-resources/maven
 mavenPushRepository=''
