--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) VMware, Inc. 2022-2024. All rights reserved.
+# Copyright 2022-2024 Broadcom. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 
@@ -11,8 +11,7 @@ additionalMavenRepoURLs=''
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-
-gemfireVersion=9.15.10
+gemfireVersion=9.15.11
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
