SDGF-209: Running tests under JDK21

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,11 @@
 #
 
 #
+# Copyright 2024 Broadcom. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+
+#
 # Copyright 2022-2024 Broadcom. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -16,7 +21,6 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
 gemfireVersion=10.2.0-build.1076
-jdkVersion=17
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
