SDGF-287: Adding commercial repositories support

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,10 @@ additionalMavenRepoURLs=''
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-
-gemfireVersion=10.0.3
+gemfireVersion=10.0.4
+spring-framework.version=5.3.34
+spring-data-bom.version=2021.2.18
+spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
