--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,10 @@
 
 #
+# Copyright 2024 Broadcom. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+
+#
 # Copyright (c) VMware, Inc. 2022-2023. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
@@ -12,9 +17,10 @@ additionalMavenRepoURLs=''
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-
-gemfireVersion=10.1.0
-springDataVersion=3.0.12
+gemfireVersion=10.1.1
+spring-framework.version=6.0.22
+spring-data-bom.version=2022.0.12
+spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
