--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,10 @@ additionalMavenRepoURLs=''
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-
-gemfireVersion=10.1.0
+gemfireVersion=10.1.1
+spring-framework.version=6.0.22
+spring-data-bom.version=2023.0.12
+spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
