--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,9 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
 gemfireVersion=9.15.11
+spring-framework.version=5.3.34
+spring-data-bom.version=2021.1.10
+spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
