--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,10 @@ additionalMavenRepoURLs=''
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-
-gemfireVersion=9.15.11
-
+gemfireVersion=10.0.4
+spring-framework.version=6.0.22
+spring-data-bom.version=2022.0.12
+spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
