--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,6 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-#
-# Copyright 2024 Broadcom. All rights reserved.
-# SPDX-License-Identifier: Apache-2.0
-#
-
-#
-# Copyright 2022-2024 Broadcom. All rights reserved.
-# SPDX-License-Identifier: Apache-2.0
-#
-
 group = com.vmware.gemfire
 version = 1.0.1-build.9999
 
@@ -21,6 +11,9 @@ description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
 gemfireVersion=10.2.0-build.1076
+spring-framework.version=6.1.6
+spring-data-bom.version=2023.1.7
+spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
