--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
 cacheApiVersion = "1.1.1"
-springFrameworkVersion = "6.1.6"
-springDataVersion = "3.3.0"
+springFrameworkVersion = "6.1.10"
+springDataVersion = "3.3.1"
 springShiroVersion = "1.13.0"
 springShellVersion = "1.2.0.RELEASE"
-springBootVersion = "3.3.0-RC1"
+springBootVersion = "3.3.1"
 aspectJVersion = "1.9.20.1"
 jacksonVersion = "2.16.2"
 antlrVersion = "2.7.7"
