--- a/spring-data-vmware-gemfire/gradle/wrapper/gradle-wrapper.properties
+++ b/spring-data-vmware-gemfire/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,8 @@
+#
+# Copyright 2024 Broadcom. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.5-bin.zip
