SDGF-294: Add artifactory publishing plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ version=1.0.0-build.9999
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-gemfireVersion=10.2.0-build.1135
+gemfireVersion=10.1.1
 spring-framework.version=6.1.10
 spring-data-bom.version=2024.0.1
 spring.gemfire.enable.private.repositories=false
@@ -18,9 +18,4 @@ spring.gemfire.enable.private.repositories=false
 org.gradle.parallel=true
 org.gradle.workers.max=3
 
-docsGCSBucket=
-docsGCSProject=
-
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
-additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire,gcs://spring-gemfire-build-resources/maven
-mavenPushRepository=''
