SDGF-294: Making library changes to try and fix tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,12 +10,13 @@ version=1.0.0-build.9999
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-gemfireVersion=10.1.1
-spring-framework.version=6.1.10
-spring-data-bom.version=2024.0.1
+gemfireVersion=10.2.0-build.1205
+spring-framework.version=6.1.12
+spring-data-bom.version=2024.0.3
 spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
 
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
+additionalMavenRepoURLs=gcs://gemfire-build-resources/maven/gemfire,gcs://spring-gemfire-build-resources/maven
