SDGF-287: Update to latest patch versions

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,31 @@
 [versions]
+annotationApiVersion = "2.1.1"
+antlrVersion = "2.7.7"
+aspectJVersion = "1.9.20.1"
+assertJVersion = "3.22.0"
+awaitilityVersion = "4.2.2"
 cacheApiVersion = "1.1.1"
-springDataVersion = "2022.0.12" #3.0.12
-springFrameworkVersion = "6.0.19"
+cdiApiVersion = "4.0.1"
+derbyVersion = "10.9.1.0"
+googleCloudStorageVersion = "2.30.2"
+interceptorApiVersion = "1.2.2"
+jacksonVersion = "2.14.3"
+logbackVersion = "1.4.14"
+log4JVersion = "2.19.0"
+jUnitJupiterVersion = "5.9.3"
+jUnitVersion = "4.13.2"
+lombokPluginVersion = "8.6"
+lombokVersion = "1.18.34"
+mockitoVersion = "4.8.1"
+multithreadedTCVersion = "1.01"
+openWebBeansVersion = "2.0.27"
+snappyVersion = "0.4"
+springDependencyManagementVersion = "1.1.6"
+springDataVersion = "2022.0.12"
+springFrameworkVersion = "6.0.23"
 springShiroVersion = "1.12.0"
 springShellVersion = "1.2.0.RELEASE"
 springBootVersion = "3.0.13"
-aspectJVersion = "1.9.20.1"
-jacksonVersion = "2.14.3"
-antlrVersion = "2.7.7"
-cdiApiVersion = "4.0.1"
-interceptorApiVersion = "1.2.2"
-logbackVersion = "1.4.14"
-log4JVersion = "2.19.0"
-annotationApiVersion = "2.1.1"
-derbyVersion = "10.9.1.0"
-openWebBeansVersion = "2.0.27"
-assertJVersion = "3.22.0"
-snappyVersion = "0.4"
-multithreadedTCVersion = "1.01"
-jUnitJupiterVersion = "5.9.3"
-jUnitVersion = "4.13.2"
-mockitoVersion = "4.8.1"
-lombokVersion = "1.18.32"
-awaitilityVersion = "4.2.1"
-googleCloudStorageVersion = "2.30.2"
-springDependencyManagementVersion = "1.1.4"
-lombokPluginVersion = "8.6"
 versionCatalogUpdateVersion = "0.8.4"
 versionsVersion = "0.50.0"
 
