--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,34 +1,34 @@
 [versions]
-cacheApiVersion = "1.1.1"
-springFrameworkVersion = "6.1.10"
-springDataVersion = "3.3.1"
-springShiroVersion = "1.13.0"
-springShellVersion = "1.2.0.RELEASE"
-springBootVersion = "3.3.1"
-aspectJVersion = "1.9.20.1"
-jacksonVersion = "2.16.2"
+annotationApiVersion = "2.1.1"
 antlrVersion = "2.7.7"
+aspectJVersion = "1.9.20.1"
+assertJVersion = "3.24.2"
+awaitilityVersion = "4.2.2"
+cacheApiVersion = "1.1.1"
 cdiApiVersion = "4.0.1"
+derbyVersion = "10.9.1.0"
+gemFireTestContainersVersion = "2.3.0"
+googleCloudStorageVersion = "2.30.2"
 interceptorApiVersion = "1.2.2"
+jacksonVersion = "2.16.2"
+jUnitJupiterVersion = "5.10.3"
+jUnitVersion = "4.13.2"
 logbackVersion = "1.4.14"
 log4JVersion = "2.19.0"
-annotationApiVersion = "2.1.1"
-derbyVersion = "10.9.1.0"
-openWebBeansVersion = "2.0.27"
-assertJVersion = "3.24.2"
-snappyVersion = "0.4"
-multithreadedTCVersion = "1.01"
-jUnitJupiterVersion = "5.10.2"
-jUnitVersion = "4.13.2"
-mockitoVersion = "5.11.0"
-lombokVersion = "1.18.32"
-awaitilityVersion = "4.2.1"
-googleCloudStorageVersion = "2.30.2"
-springDependencyManagementVersion = "1.1.4"
 lombokPluginVersion = "8.6"
+lombokVersion = "1.18.34"
+mockitoVersion = "5.11.0"
+multithreadedTCVersion = "1.01"
+openWebBeansVersion = "2.0.27"
+snappyVersion = "0.4"
+springDependencyManagementVersion = "1.1.6"
+springFrameworkVersion = "6.1.13"
+springDataVersion = "3.3.4"
+springShiroVersion = "1.13.0"
+springShellVersion = "1.2.0.RELEASE"
+springBootVersion = "3.3.3"
 versionCatalogUpdateVersion = "0.8.4"
 versionsVersion = "0.50.0"
-gemFireTestContainersVersion = "2.0.0"
 
 [libraries]
 gemfire-core = { module = "com.vmware.gemfire:gemfire-core", version.ref = "gemfireVersion" }
@@ -70,7 +70,7 @@ assertJ = { module = "org.assertj:assertj-core", version.ref = "assertJVersion" 
 mockito = { module = "org.mockito:mockito-core", version.ref = "mockitoVersion" }
 lombok = { module = "org.projectlombok:lombok", version.ref = "lombokVersion" }
 awaitility = { module = "org.awaitility:awaitility", version.ref = "awaitilityVersion" }
-gemfire-testcontainers = { module = "com.vmware.gemfire:gemfire-testcontainers", version.ref = "gemFireTestContainersVersion" }
+gemfire-testcontainers = { module = "dev.gemfire:gemfire-testcontainers", version.ref = "gemFireTestContainersVersion" }
 google-cloud-storage = { module = "com.google.cloud:google-cloud-storage", version.ref = "googleCloudStorageVersion" }
 
 [plugins]
