SDGF-294: parameterize artifactory URL

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ spring.gemfire.enable.private.repositories=false
 
 org.gradle.parallel=true
 org.gradle.workers.max=3
+
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
