SDGF-294: parameterize artifactory URL

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,5 @@ docsGCSProject=
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
 additionalMavenRepoURLs=''
 mavenPushRepository=''
+
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
