SDGF-294: fix parameter initialization

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ version=1.0.0-build.9999
 description = 'Spring Data for VMware GemFire'
 
 minimumGradleVersion = 8.5
-gemfireVersion=10.2.0-build.9999
+gemfireVersion=10.2.0
 spring-framework.version=6.1.13
 spring-data-bom.version=2024.0.4
 spring.gemfire.enable.private.repositories=false
@@ -19,3 +19,5 @@ org.gradle.parallel=true
 org.gradle.workers.max=3
 
 springTestGemfireDockerImage=gemfire/gemfire:10.1-jdk17
+
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8
